--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -5,13 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ramdi El Mostafa Portfolio , ELM PORTFOLIO, HTML,CSS">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Righteous&display=swap" rel="stylesheet">
-    <title>ELM Portfolio</title>
+    <title>Ramdi EL Mostafa || PORTFOLIO</title>
 </head>
 <body>
-    <h1>test</h1>
+    <nav>
+        <div class="logo">
+            <a href="#">
+                <img src="/images/logo.png" alt="LOGO">
+            </a>
+        </div>
+        <ul class="nav-links">
+            <li class="link"><a href="#">Home</a></li>
+            <li class="link"><a href="#">About</a></li>
+            <li class="link"><a href="#">Skills</a></li>
+            <li class="link"><a href="#">Projects</a></li>
+            <li class="link"><a href="#">Contact</a></li>
+        </ul>
+        <button class="btn">Resume<span></span></button>
+    </nav>
 </body>
 </html>
