--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -7,26 +7,49 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Days+One&family=Poppins:wght@300;600;700&family=Righteous&display=swap" rel="stylesheet">
     <title>Ramdi EL Mostafa || PORTFOLIO</title>
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <a href="#">
-                <img src="/images/logo.png" alt="LOGO">
-            </a>
+    <!---HEADER-->
+    <div class="header-section">
+        <nav>
+            <div class="logo">
+                <a href="#">
+                    <img src="/images/logo.png" alt="LOGO">
+                </a>
+            </div>
+            <ul class="nav-links">
+                <li class="link"><a href="#">Home</a></li>
+                <li class="link"><a href="#">About</a></li>
+                <li class="link"><a href="#">Skills</a></li>
+                <li class="link"><a href="#">Projects</a></li>
+                <li class="link"><a href="#">Contact</a></li>
+            </ul>
+            <button class="btn">Resume<span></span></button>
+        </nav>
+        <div class="hero-wrapper">
+            <div class="hero">
+                <img class="hero-img" src="/images/GJY (7).jpg" ></img>
+                <div class="sentences">
+                    <div class="phrase sentence__one">
+                        <h1 class="title t-one">HEY, IM REM</h1>
+                    </div>
+                    <div class="phrase sentence__two">
+                        <h1 class="title t-two">FRONTEND DEV.</h1>
+                    </div>
+                    <div class="phrase sentence__three">
+                        <h1 class="title t-three">& DESIGNER</h1>
+                    </div>
+                </div>
+            </div>
         </div>
-        <ul class="nav-links">
-            <li class="link"><a href="#">Home</a></li>
-            <li class="link"><a href="#">About</a></li>
-            <li class="link"><a href="#">Skills</a></li>
-            <li class="link"><a href="#">Projects</a></li>
-            <li class="link"><a href="#">Contact</a></li>
-        </ul>
-        <button class="btn">Resume<span></span></button>
-    </nav>
+    </div>
+
+    <section class=""></section>
+    <section class=""></section>
+    <section class=""></section>
+    <section class=""></section>
 </body>
 </html>
