--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -12,7 +12,6 @@
     <title>Ramdi EL Mostafa || PORTFOLIO</title>
 </head>
 <body>
-    <!---HEADER-->
     <div class="header-section">
         <nav>
             <div class="logo">
@@ -20,14 +19,27 @@
                     <img src="/images/logo.png" alt="LOGO">
                 </a>
             </div>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <ul class="nav-links">
-                <li class="link"><a href="#">Home</a></li>
-                <li class="link"><a href="#">About</a></li>
-                <li class="link"><a href="#">Skills</a></li>
-                <li class="link"><a href="#">Projects</a></li>
-                <li class="link"><a href="#">Contact</a></li>
+                <li class="link">
+                    <a href="#">Home</a>
+                </li>
+                <li class="link">
+                    <a href="#">About</a>
+                </li>
+                <li class="link">
+                    <a href="#">Skills</a>
+                </li>
+                <li class="link">
+                    <a href="#">Projects</a>
+                </li>
+                <li class="link">
+                    <a href="#">Contact</a>
+                </li>
             </ul>
-            <button class="btn">Resume<span></span></button>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
         </nav>
         <div class="hero-wrapper">
             <div class="hero">
