--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -14,10 +14,14 @@
 <body>
     <div class="header-section">
         <nav>
-            <div class="logo">
-                <a href="#">
-                    <img src="/images/logo.png" alt="LOGO">
-                </a>
+            <div class="logo-wrapper">
+                <div class="ramdi">ramdi</div>
+                <div class="logo">
+                    <a href="#">
+                        <img src="/images/logo.png" alt="LOGO">
+                    </a>
+                </div>
+                <div class="elmostafa">mostafa</div>
             </div>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <ul class="nav-links">
@@ -25,7 +29,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li class="link">
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li class="link">
                     <a href="#">Skills</a>
@@ -35,6 +39,9 @@
                 </li>
                 <li class="link">
                     <a href="#">Contact</a>
+                </li>
+                <li class="link">
+                    <button class="btn" href="#">Resume</button>
                 </li>
             </ul>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -59,7 +66,23 @@
         </div>
     </div>
 
-    <section class=""></section>
+    <section class="about-section" id="about">
+        <div class="section-title">
+            <h1>About</h1>
+        </div>
+        <div class="about-container">
+                <div class="avatar">
+                    <img src="/images/proto.png">
+                </div>
+                <div class="content">
+                    <p>
+                        🖐️HI im Ramdi El Mostafa <br> based frontend developer
+                        with a design background. Crafting seamless digital experiences by blending design
+                        finesse with frontend expertise.
+                    </p>
+                </div>
+        </div>
+    </section>
     <section class=""></section>
     <section class=""></section>
     <section class=""></section>
