--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="header-section">
+        <div class="scroll-watcher"></div>
         <nav>
             <div class="logo-wrapper">
                 <div class="ramdi">ramdi</div>
@@ -32,7 +33,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li class="link">
-                    <a href="#">Skills</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li class="link">
                     <a href="#">Projects</a>
@@ -50,7 +51,7 @@
         </nav>
         <div class="hero-wrapper">
             <div class="hero">
-                <img class="hero-img" src="/images/GJY (7).jpg" ></img>
+                <img class="hero-img" src="/images/GJY.webp" ></img>
                 <div class="sentences">
                     <div class="phrase sentence__one">
                         <h1 class="title t-one">HEY, IM REM</h1>
@@ -65,26 +66,34 @@
             </div>
         </div>
     </div>
-
     <section class="about-section" id="about">
         <div class="section-title">
             <h1>About</h1>
         </div>
         <div class="about-container">
                 <div class="avatar">
-                    <img src="/images/proto.png">
+                    <img src="/images/test-min.webp">
                 </div>
                 <div class="content">
                     <p>
-                        🖐️HI im Ramdi El Mostafa <br> based frontend developer
+                        🖐️HI, im Ramdi El Mostafa <br> based frontend developer
                         with a design background. Crafting seamless digital experiences by blending design
                         finesse with frontend expertise.
                     </p>
                 </div>
         </div>
     </section>
-    <section class=""></section>
-    <section class=""></section>
-    <section class=""></section>
+    <section class="skills-section" id="skills">
+        <div class="section-title">
+            <h1>Skills</h1>
+        </div>
+        <div class="skills-wrapper">
+            <div class="skills-header">
+                <h1></h1>
+            </div>
+        </div>
+    </section>
+    <section class="projects-section" id="projects"></section>
+    <section class="contact-section" id="contact"></section>
 </body>
 </html>
