--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -88,8 +88,12 @@
             <h1>Skills</h1>
         </div>
         <div class="skills-wrapper">
-            <div class="skills-header">
-                <h1></h1>
+            <div class="skills__header">
+                <p>
+                    Design-inspired frontend developer exploring React
+                    for dynamic web magic Proficient in HTML, CSS, and JavaScript 
+                    weaving creativity seamlessly with functionality.
+                </p>
             </div>
         </div>
     </section>
