--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -90,11 +90,73 @@
         <div class="skills-wrapper">
             <div class="skills__header">
                 <p>
-                    Design-inspired frontend developer exploring React
+                    Design inspired Frontend developer exploring React
                     for dynamic web magic Proficient in HTML, CSS, and JavaScript 
                     weaving creativity seamlessly with functionality.
                 </p>
             </div>
+            <div class="card-container">
+                <div class="card">
+                      <span>html</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>css</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>sass</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>javascript</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>react</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>bootstrap</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>tailwind</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>gsap</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>figma</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                  <div class="card">
+                      <span>git</span>
+                  <div class="card-img">
+                    <img src="" alt=""/>
+                  </div>
+                  </div>
+                </div>
         </div>
     </section>
     <section class="projects-section" id="projects"></section>
