finishing skills-section by adding marquee to the skills

--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -99,63 +99,63 @@
                 <div class="card">
                       <span>html</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/html.svg"  alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>css</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/css.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>sass</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/sass.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>javascript</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/js.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>react</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/react.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>bootstrap</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/bootstrap.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>tailwind</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/tailwind.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>gsap</span>
-                  <div class="card-img">
-                    <img src="" alt=""/>
+                  <div class="card-img gsap">
+                    <img src="/images/icons/gsap.png" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>figma</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/figma.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                   <div class="card">
                       <span>git</span>
                   <div class="card-img">
-                    <img src="" alt=""/>
+                    <img src="/images/icons/github.svg" alt=""/>
                   </div>
-                  </div>
+                </div>
                 </div>
         </div>
     </section>
