--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -36,10 +36,10 @@
                     <a href="#skills">Skills</a>
                 </li>
                 <li class="link">
-                    <a href="#">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li class="link">
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li class="link">
                     <button class="btn" href="#">Resume</button>
@@ -99,67 +99,114 @@
                 <div class="card">
                       <span>html</span>
                   <div class="card-img">
-                    <img src="/images/icons/html.svg"  alt=""/>
+                    <img src="/images/icons/html.svg"  alt="html"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>css</span>
                   <div class="card-img">
-                    <img src="/images/icons/css.svg" alt=""/>
+                    <img src="/images/icons/css.svg" alt="css"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>sass</span>
                   <div class="card-img">
-                    <img src="/images/icons/sass.svg" alt=""/>
+                    <img src="/images/icons/sass.svg" alt="sass"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>javascript</span>
                   <div class="card-img">
-                    <img src="/images/icons/js.svg" alt=""/>
+                    <img src="/images/icons/js.svg" alt="javascript"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>react</span>
                   <div class="card-img">
-                    <img src="/images/icons/react.svg" alt=""/>
+                    <img src="/images/icons/react.svg" alt="react"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>bootstrap</span>
                   <div class="card-img">
-                    <img src="/images/icons/bootstrap.svg" alt=""/>
+                    <img src="/images/icons/bootstrap.svg" alt="bootstrap"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>tailwind</span>
                   <div class="card-img">
-                    <img src="/images/icons/tailwind.svg" alt=""/>
+                    <img src="/images/icons/tailwind.svg" alt="tailwind"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>gsap</span>
                   <div class="card-img gsap">
-                    <img src="/images/icons/gsap.png" alt=""/>
+                    <img src="/images/icons/gsap.png" alt="greenscock"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>figma</span>
                   <div class="card-img">
-                    <img src="/images/icons/figma.svg" alt=""/>
+                    <img src="/images/icons/figma.svg" alt="figma"/>
                   </div>
                 </div>
                   <div class="card">
                       <span>git</span>
                   <div class="card-img">
-                    <img src="/images/icons/github.svg" alt=""/>
+                    <img src="/images/icons/git.svg" alt="git"/>
                   </div>
                 </div>
                 </div>
         </div>
     </section>
-    <section class="projects-section" id="projects"></section>
+    <section class="projects-section" id="projects">
+        <div class="section-title">
+            <h1>Projects</h1>
+        </div>
+        <div class="projects-wrapper">
+            <div class="projects">
+                <div class="project">
+                    <img class="cover" src="/images/gifs/todo.gif" alt="">
+                    <div class="content-hover">
+                        <div class="project__link">
+                            <a href="">
+                                <img src="/images/icons/github.svg" alt="icon">
+                            </a>
+                        </div>
+                        <div class="project__content">
+                            <p>Todo list to Simplify task management with HTML/CSS/JS. Edit, mark tasks complete</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="cover" src="/images/gifs/linktree.gif" alt="">
+                    <div class="content-hover">
+                        <div class="project__link">
+                            <a href="">
+                                <img src="/images/icons/github.svg" alt="icon">
+                            </a>
+                        </div>
+                        <div class="project__content">
+                            <p>Linktree: HTML/CSS/JS. Customizable, responsive links + sharing Links ability</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="cover" src="/images/gifs/creative.gif" alt="icon">
+                    <div class="content-hover">
+                        <div class="project__link">
+                            <a href="">
+                                <img src="/images/icons/github.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="project__content">
+                            <p>Creative portfolio with vanilla HTML/CSS/JS i tried to cop from Awwwards website</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="contact-section" id="contact"></section>
 </body>
 </html>
