--- a/Level-1/Task_1_PORTFOLIO/index.html
+++ b/Level-1/Task_1_PORTFOLIO/index.html
@@ -84,15 +84,13 @@
         </div>
     </section>
     <section class="skills-section" id="skills">
-        <div class="section-title">
+        <div class="section-title skills-title">
             <h1>Skills</h1>
         </div>
         <div class="skills-wrapper">
             <div class="skills__header">
                 <p>
-                    Design inspired Frontend developer exploring React
-                    for dynamic web magic Proficient in HTML, CSS, and JavaScript 
-                    weaving creativity seamlessly with functionality.
+                    I'm a self-taught frontend developer from Morocco, passionate about minimalist, modern website design. Experienced with various technologies.
                 </p>
             </div>
             <div class="card-container">
@@ -160,7 +158,7 @@
         </div>
     </section>
     <section class="projects-section" id="projects">
-        <div class="section-title">
+        <div class="section-title project-title">
             <h1>Projects</h1>
         </div>
         <div class="projects-wrapper">
@@ -169,7 +167,7 @@
                     <img class="cover" src="/images/gifs/todo.gif" alt="">
                     <div class="content-hover">
                         <div class="project__link">
-                            <a href="">
+                            <a href="https://github.com/Elmostafa01/Todo-App"  target="_blank">
                                 <img src="/images/icons/github.svg" alt="icon">
                             </a>
                         </div>
@@ -182,7 +180,7 @@
                     <img class="cover" src="/images/gifs/linktree.gif" alt="">
                     <div class="content-hover">
                         <div class="project__link">
-                            <a href="">
+                            <a href="https://github.com/Elmostafa01/Linktree-Template-with-Animation" target="_blank">
                                 <img src="/images/icons/github.svg" alt="icon">
                             </a>
                         </div>
@@ -195,7 +193,7 @@
                     <img class="cover" src="/images/gifs/creative.gif" alt="icon">
                     <div class="content-hover">
                         <div class="project__link">
-                            <a href="">
+                            <a href="https://github.com/Elmostafa01/Creative-Website-doopa" target="_blank">
                                 <img src="/images/icons/github.svg" alt="">
                             </a>
                         </div>
@@ -207,6 +205,49 @@
             </div>
         </div>
     </section>
-    <section class="contact-section" id="contact"></section>
+    <section class="contact-section" id="contact">
+        <div class="section-title project-title">
+            <h1>Contact</h1>
+        </div>
+        <div class="contact-wrapper">
+            <div class="contact-division">
+                <div class="left">
+                    <h1>GET IN TOUCH</h1>
+                </div>
+                <div class="right">
+                    <form class="form" action="https://formspree.io/f/xyyrenkv" method="post">
+                        <h1><span>Get</span> in touch</h1>
+                        <input type="text" name="Name" placeholder="Your Name"/>
+                        <input type="text" name="Email" placeholder="Your Email" required/>
+                        <textarea rows="10" cols="10" required>Your Message</textarea>
+                        <button class="sub" type="submit">Send</button>
+                    </form>
+                </div>
+                <div class="bottom">
+                    elmostafaramdi@hotmail.com
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="signature">
+            <p>Made By 💜 REM COPYRIGHT ©️</p>
+        </div>
+        <div class="footer-icons">
+            <p style="margin-bottom: 1rem;">Reach me at :</p>
+            <div style="display: flex;margin-bottom: 1rem;justify-content: center;gap: 3rem;">
+                <div class="linkedin">
+                    <a href="https://www.linkedin.com/in/el-mostafa-ramdi-06958a176/" target="_blank">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="200px" width="200px" xmlns="http://www.w3.org/2000/svg"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg>
+                    </a>
+                </div>
+                <div class="github">
+                    <a href="https://github.com/Elmostafa01" target="_blank">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 480 512" height="200px" width="200px" xmlns="http://www.w3.org/2000/svg"><path d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"></path></svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
