--- a/Level-1/Task_2_LANDING_PAGE/index.html
+++ b/Level-1/Task_2_LANDING_PAGE/index.html
@@ -170,47 +170,70 @@
                     </div>
 
                 </div>
-
         </div>
     </section>
-    <footer>
+    <footer class="">
         <div class="footer-content">
             <div class="col__footer">
                 <div class="label__footer">Docs</div>
                 <ul>
-                    <li>Getting Started</li>
-                    <li>Usage Guide</li>
-                    <li>Tutorial</li>
-                    <li>FAQ</li>
-                    <li>API Reference</li>
+                    <li><a href="https://redux.js.org/introduction/getting-started">Getting Started</a></li>
+                    <li><a href="https://redux.js.org/usage">Usage Guide</a></li>
+                    <li><a href="https://redux.js.org/tutorials/essentials/part-1-overview-concepts">Tutorial</a></li>
+                    <li><a href="https://redux.js.org/faq">FAQ</a></li>    
+                    <li><a href="https://redux.js.org/api/api-reference">API Reference</a></li>
                 </ul>
             </div>
             <div class="col__footer">
                 <div class="label__footer">Community</div>
                 <ul>
                     <li>
-                        <span>Reactiflux Discord</span>
-                        <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg>
+                        <a href="https://discord.com/invite/0ZcbPKXt5bZ6au5t">
+                            <span>Reactiflux Discord</span>
+                            <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg>
+                        </a>
                     </li>
                     <li>
-                        <span>Stack Overflow</span>
-                        <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg>
+                        <a href="https://stackoverflow.com/questions/tagged/redux">
+                            <span>Stack Overflow</span>
+                            <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg>
+                        </a>
                     </li>
-                    <li>Feedback</li>
+                    <li><a href="https://redux.js.org/introduction/getting-started#help-and-discussion">Feedback</a></li>
                 </ul>
             </div>
             <div class="col__footer">
                 <div class="label__footer">More</div>
                 <ul>
                     <li>
-                        <span>Github</span>
-                        <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg>
+                        <a href="https://github.com/reduxjs/redux">
+                            <span>Github</span>
+                            <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg>
+                        </a>
                     </li>
                     <li>
-                        <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deployed by Netlify">
+                        <a href="https://www.netlify.com/"><img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deployed by Netlify"></a>
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="signature">
+            <div class="logo-redux">
+                <svg class="gradient-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                    <defs>
+                      <linearGradient id="svgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" stop-color="#9354FF"/>
+                        <stop offset="62%" stop-color="#5200FF"/>
+                      </linearGradient>
+                    </defs>
+                    <g fill="url(#svgGradient)">
+                      <path d="M65.6 65.4c2.9-.3 5.1-2.8 5-5.8-.1-3-2.6-5.4-5.6-5.4h-.2c-3.1.1-5.5 2.7-5.4 5.8.1 1.5.7 2.8 1.6 3.7-3.4 6.7-8.6 11.6-16.4 15.7-5.3 2.8-10.8 3.8-16.3 3.1-4.5-.6-8-2.6-10.2-5.9-3.2-4.9-3.5-10.2-.8-15.5 1.9-3.8 4.9-6.6 6.8-8-.4-1.3-1-3.5-1.3-5.1-14.5 10.5-13 24.7-8.6 31.4 3.3 5 10 8.1 17.4 8.1 2 0 4-.2 6-.7 12.8-2.5 22.5-10.1 28-21.4z"/>
+                      <path d="M83.2 53c-7.6-8.9-18.8-13.8-31.6-13.8H50c-.9-1.8-2.8-3-4.9-3h-.2c-3.1.1-5.5 2.7-5.4 5.8.1 3 2.6 5.4 5.6 5.4h.2c2.2-.1 4.1-1.5 4.9-3.4H52c7.6 0 14.8 2.2 21.3 6.5 5 3.3 8.6 7.6 10.6 12.8 1.7 4.2 1.6 8.3-.2 11.8-2.8 5.3-7.5 8.2-13.7 8.2-4 0-7.8-1.2-9.8-2.1-1.1 1-3.1 2.6-4.5 3.6 4.3 2 8.7 3.1 12.9 3.1 9.6 0 16.7-5.3 19.4-10.6 2.9-5.8 2.7-15.8-4.8-24.3z"/>
+                      <path d="M32.4 67.1c.1 3 2.6 5.4 5.6 5.4h.2c3.1-.1 5.5-2.7 5.4-5.8-.1-3-2.6-5.4-5.6-5.4h-.2c-.2 0-.5 0-.7.1-4.1-6.8-5.8-14.2-5.2-22.2.4-6 2.4-11.2 5.9-15.5 2.9-3.7 8.5-5.5 12.3-5.6 10.6-.2 15.1 13 15.4 18.3 1.3.3 3.5 1 5 1.5-1.2-16.2-11.2-24.6-20.8-24.6-9 0-17.3 6.5-20.6 16.1-4.6 12.8-1.6 25.1 4 34.8-.5.7-.8 1.8-.7 2.9z"/>
+                    </g>
+                </svg>            
+            </div>
+            <p>Copyright © 2015–2024 Dan Abramov and the Redux documentation authors.</p>
         </div>
     </footer>
 </body>
