--- a/Level-1/Task_3_CALCULATOR/index.html
+++ b/Level-1/Task_3_CALCULATOR/index.html
@@ -9,31 +9,30 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="bg-asset">
-    </div>
+    <div class="bg-asset"></div>
     <div class="calculator">
-        <div class="display" id="display">0</div>
+        <input type="text" class="display" />
         <div class="buttons">
-          <button class="passive">(</button>
-          <button class="passive">)</button>
-          <button class="passive">CE</button>
-          <button class="passive">C</button>
-          <button class="numbers">7</button>
-          <button class="numbers">8</button>
-          <button class="numbers">9</button>
-          <button class="active">/</button>
-          <button class="numbers">4</button>
-          <button class="numbers">5</button>
-          <button class="numbers">6</button>
-          <button class="active">X</button>
-          <button class="numbers">1</button>
-          <button class="numbers">2</button>
-          <button class="numbers">3</button>
-          <button class="active">+</button>
-          <button class="active">.</button>
-          <button class="numbers">0</button>
-          <button class="active">-</button>
-          <button class="active">=</button>
+          <button class="passive" data-value="AC">AC</button>
+          <button class="passive" data-value="DEL">DEL</button>
+          <button class="active" data-value="%">%</button>
+          <button class="active" data-value="/">/</button>
+          <button class="numbers" data-value="7">7</button>
+          <button class="numbers" data-value="8">8</button>
+          <button class="numbers" data-value="9">9</button>
+          <button class="active" data-value="*">*</button>
+          <button class="numbers" data-value="4">4</button>
+          <button class="numbers" data-value="5">5</button>
+          <button class="numbers" data-value="6">6</button>
+          <button class="active" data-value="-">-</button>
+          <button class="numbers" data-value="1">1</button>
+          <button class="numbers" data-value="2">2</button>
+          <button class="numbers" data-value="3">3</button>
+          <button class="active" data-value="+">+</button>
+          <button class="numbers" data-value="0">0</button>
+          <button class="numbers" data-value="1/2">1/2</button>
+          <button class="passive" data-value=".">.</button>
+          <button class="active" data-value="=">=</button>
         </div>
       </div>
     <script src="script.js"></script>
